--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,20 @@
 </dependency>
 
 
+<!-- 
 <dependency>
 	<groupId>mysql</groupId>
 	<artifactId>mysql-connector-java</artifactId>
 	<scope>runtime</scope>
 </dependency>
-
+ -->
+ 
+ <dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.18</version>
+</dependency>
+ 
 
 	</dependencies>
 
